real environment works correctly